<resources>
    <string name="app_name">Tingle</string>
    <string name="headline">Last thing added</string>
    <string name="heading_create">Add new thing</string>
    <string name="what_thing">What?</string>
    <string name="where_thing">Where?</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="back_button">Back</string>
    <string name="delete_button">Delete</string>
    <string name="heading_showAllItems">See items</string>
    <string name="item_notFound_toast">Item not found</string>
    <string name="item_found_toast">You have selected the item</string>
    <string name="item_deleted_toast">The following item was deleted:</string>
    <string name="heading_search">Search items</string>
    <string name="what_hint">Enter name of item</string>
    <string name="where_hint">Enter location of item</string>
    <string name="item_notSpecified_toast">Please specify item in what field</string>
    <string name="item_locationIs_toast">Located in:</string>
    <string name="thing_what_hint">Enter a title for the thing.</string>
    <string name="thing_where_hint">Enter the location of the item.</string>

    <!-- Toolbar menu resources -->
    <string name="new_thing">Add Item</string>
    <string name="show_subtitle">Show subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s crimes</string>
    <string name="delete_thing">Delete</string>
    <string name="things_title">Things</string>

    <!-- Barcode resources -->
    <string name="heading_scan">Scan Item</string>
    <string name="barcode_thing">Barcode</string>
    <string name="barcode_hint">Scan to get barcode</string>
    <string name="please_connect_to_internet">Please connect to the internet.</string>
    <string name="wifi_connected">Wifi is connected.</string>
    <string name="lost_connection">Connection was lost</string>
    <string name="thing_title_label">Title</string>
    <string name="ok">Ok</string>
    <string name="date_picker_title">Most recent date</string>
    <string name="heading_date">Choose date</string>
    <string name="heading_save">Save</string>
    <string name="search">Search</string>
    <string name="sort_date">Sort By Date</string>
    <string name="sort_what">Sort By Name</string>
    <string name="sort_where">Sort By Location</string>
    <string name="search_what">Search On Name</string>
    <string name="search_where">Search On Location</string>
    <string name="back">Back</string>
    <string name="service_not_available">Service Not Available</string>
    <string name="invalid_lat_long_used">Invalid Coordinates</string>
    <string name="no_address_found">No Address Found</string>
    <string name="address_found">Address Found</string>
    <string name="no_geocoder_available">No Geocoder</string>
    <string name="heading_location">Get Location</string>
    <string name="google_app_id">tvao.mmad.itu.tingle</string>
</resources>
