<?xml version="1.0" encoding="utf-8"?>

<!-- This layout represents the toolbar menu in the top right corner used to add and delete things with action items -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Add menu in toolbar -->
    <item
    android:id="@+id/menu_item_new_thing"
    android:icon="@drawable/ic_menu_add"
    android:title="@string/new_thing"
    app:showAsAction="ifRoom|withText"/>
    <!-- showAsAction attribute refers to whether item will appear in toolbar -->

    <!-- Show subtitle for given thing in menu if space -->
    <item
        android:id="@+id/menu_item_show_subtitle"
        android:title="@string/show_subtitle"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_item_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom"/>

    <!--<item-->
        <!--android:id="@id/back_button"-->
        <!--android:icon="@drawable/ic_back"-->
        <!--android:title="@string/back"-->
        <!--app:showAsAction="ifRoom|withText"/>-->

    <!--<item-->
        <!--android:id="@+id/delete_Button"-->
        <!--android:icon="@drawable/ic_menu_delete"-->
        <!--android:title="@string/delete"-->
        <!--app:showAsAction="ifRoom|withText"/>-->

    <item
        android:id="@+id/sortDate"
        android:title="@string/sort_date"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/sortWhat"
        android:title="@string/sort_what"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/sortWhere"
        android:title="@string/sort_where"
        app:showAsAction="collapseActionView"/>


    <!-- Set what parameter used to search by (either name or location of item) -->

    <group
        android:id="@+id/search_type"
        android:checkableBehavior="single">
        <item
            android:id="@+id/search_what"
            android:title="@string/search_what"/>

        <item
            android:id="@+id/search_where"
            android:title="@string/search_where"/>

    </group>

</menu>