<?xml version="1.0" encoding="utf-8"?>

<!-- This layout is used by TingleFragment to show a detailed description of the item. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/things_title"
            style="?android:listSeparatorTextViewStyle"
            />
        <EditText android:id="@+id/crime_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:hint="@string/thing_what_hint"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_thing"
        style="?android:listSeparatorTextViewStyle"
        />

    <EditText android:id="@+id/thing_details_what"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/thing_what_hint"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/where_thing"
        style="?android:listSeparatorTextViewStyle"
        />

    <EditText android:id="@+id/thing_details_where"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/thing_where_hint"
        />

</LinearLayout>